ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: myapp
  annotations:
#    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
spec:
  ingressClassName: nginx
  rules:
    - host: ks2.laky.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  myapp-service
                port:
                  number: 80
